--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Felix Rizky Lesmana
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : https://raw.githubusercontent.com/felixrizkylesmana/felixrizkylesmana.github.io/refs/heads/master/assets/images/profile.jpg
 # behance           : your_username
 # dribbble          : your_username
   email             : rizky.lesmana999@gmail.com
