--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ author:
 # vimeo             : your_username
 # youtube           : your_channel_name
 # keybase           : your_username
+  mastodon          : @felixrizkylesmana
 
 
 ### Posts ###
