--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -95,3 +95,8 @@ keybase:
   url   : https://www.keybase.io/
   icon  : fab fa-keybase
   color : 66ccff
+
+mastodon:
+  url   : https://www.mastodon.social/
+  icon  : fab fa-mastodon
+  color : 6364FF
