--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      comments: true                                   # Set to true to enable disqus comments
+      comments: false                                   # Set to true to enable disqus comments
 
 
 ### Exclude from processing ###
