--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
 # gitlab            : your_username
   instagram         : felixrizkylesmana
 # kaggle            : your_username
-# linkedin          : your_username
+  linkedin          : felixrizkylesmana
 # medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
