--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,7 +1,7 @@
 - title: Student, University Bina Sarana Informatika
   from: 2020
   to: 2023
-  description: I studied faculty of Information System at University Bina Sarana Informatika
+  description: I studied faculty of Engineering and Informatics, Information Systems Study Program at University Bina Sarana Informatika
 
 - title: Graphic Designer, FT Grafis
   from: 2020
