Update : Link Account Social Media

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   email             : rizky.lesmana999@gmail.com
 # facebook          : your_username
   github            : felixrizkylesmana
-# gitlab            : your_username
+  gitlab            : felixrizkylesmana
   instagram         : felixrizkylesmana
 # kaggle            : your_username
   linkedin          : felixrizkylesmana
