--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -16,4 +16,9 @@
 - title: Admin & Benefit - Human Resources
   from: 2021
   to: 2023
-  description: Worked for 2 years as Admin and Benefit in Human Resources Department - PT Indomarco Prismatama.
+  description: Worked for 2 years as Admin & Benefit in Human Resources Department - PT Indomarco Prismatama.
+
+  title: Admin Payroll & Benefit - Human Resources
+  from: 2025
+  to: Now
+  description: Working until now as Payroll & Benefit Admin in Human Resources Department - CV Kulina Maju Bersama.
