--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author:
 # facebook          : your_username
   github            : felixrizkylesmana
   gitlab            : felixrizkylesmana
-  instagram         : felixrizkylesmana
+# instagram         : felixrizkylesmana
 # kaggle            : your_username
   linkedin          : felixrizkylesmana
 # medium            : your_username
